--- a/nextcloud.yml
+++ b/nextcloud.yml
@@ -23,8 +23,6 @@ services:
     restart: always
     ports:
       - 8888:80
-    links:
-      - db
     volumes:
       - nextcloud:/var/www/html
     environment:
@@ -32,3 +30,6 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=db
+    depends_on:
+      - db
+      - redis
